unpackaged/main/default/objects/StreamingObject__c/StreamingObject__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Incoming Call</label>
</CustomObject>