unpackaged/main/default/objects/StreamingObject__c/fields/Call_To__c.field-meta.xml
<CustomField>
    <fullName>Call_To__c</fullName>
    <description>call to</description>
    <label>Call To</label>
    <length>180</length>
    <type>Text</type>
</CustomField>