unpackaged/main/default/objects/StreamingObject__c/fields/Calling_From__c.field-meta.xml
<CustomField>
    <fullName>Calling_From__c</fullName>
    <label>Calling From</label>
    <length>100</length>
    <type>Text</type>
</CustomField>