unpackaged/main/default/objects/StreamingObject__c/fields/External_No__c.field-meta.xml
<CustomField>
    <fullName>External_No__c</fullName>
    <description>call to External No</description>
    <label>External No</label>
    <length>180</length>
    <type>Text</type>
</CustomField>