unpackaged/main/default/objects/StreamingObject__c/fields/Lync_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Lync_Notifications__c</fullName>
    <label>Lync Notifications</label>
    <length>100</length>
    <type>Text</type>
</CustomField>